[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/monkeyPaw.gd" type="Script" id=1]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/CARDBG.png" type="Texture" id=4]
[ext_resource path="res://assets/cardFont.tres" type="DynamicFont" id=5]

[node name="monkeyPawUI" type="CanvasLayer"]
layer = 99
visible = false
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 277.0
margin_top = 300.0
margin_right = 747.0
margin_bottom = 300.0
custom_constants/separation = 235

[node name="Card" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Card2" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 235.0
margin_right = 235.0
margin_bottom = 0.0

[node name="Card3" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_right = 470.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 0, -8.798 )

[node name="CLOSEUI" type="TextureButton" parent="."]
margin_left = 485.0
margin_top = 456.0
margin_right = 595.0
margin_bottom = 566.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="costCard" type="TextureRect" parent="."]
modulate = Color( 0.878431, 0.235294, 0.235294, 0 )
margin_left = 394.0
margin_top = 100.0
margin_right = 629.0
margin_bottom = 400.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="costCard"]
modulate = Color( 0.243137, 0.0352941, 0.0352941, 1 )
margin_left = 19.0
margin_top = 29.0
margin_right = 215.0
margin_bottom = 273.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
text = "RTEAARRARARAARW"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="costCard"]
modulate = Color( 0.168627, 0.0352941, 0.0352941, 1 )
margin_left = 19.0
margin_top = 65.0
margin_right = 213.0
margin_bottom = 271.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
text = "TEST
"
scroll_active = false

[connection signal="pressed" from="CLOSEUI" to="." method="_on_CLOSEUI_pressed"]
